@@ -1,0 +1,11 @@
+
+/*
+ * Copyright (C) 2011 Archie L. Cobbs. All rights reserved.
+ *
+ * $Id$
+ */
+
+/**
+ * Data Access Object (DAO) support classes.
+ */
+package org.dellroad.stuff.dao;
